# Bj35-bot

./: .gitignore  OWNERSHIP-TRANSFER.md  README.md
.github/: dependabot.yml
.github/workflows/: pylint.yml
Backend/: requirements.txt
Backend_v2/: .dockerignore  .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  settings.py
Backend_v2/add_users_manual/: add_users_from_json.py  add_users_single.py
Backend_v2/routes/: __init__.py  admin_routes.py  auth_routes.py  message_routes.py  robot_routes.py  task_routes.py  user_routes.py
Backend_v2/services/: __init__.py  access_token.py  task_service.py  token_manager.py  user_service.py  wecom_oauth.py  wecom_service.py  yunji_api.py  yunji_service.py
Backend_v2/sql/: schema.sql
Backend_v2/sql/migrations/: V1.0.0__init_schema.sql  V1.0.0__测试迁移系统.sql  V1.0.1__添加任务记录功能.sql  V1.0.1__调试.sql
Backend_v2/utils/: __init__.py  access_token.py  add_users_from_json.py  add_users_single.py  decorators.py  exceptions.py  postgresql_connector.py  redis_connector.py  settings.py  wecom_oauth.py  yunji_api.py
Backend_v2/utils/db/: __init__.py  initializer.py  migrator.py  postgresql_connector.py  redis_connector.py
Frontend/: package.json  vite.config.js
Frontend/src/: main.js
Frontend/src/i18n/: index.js
Frontend/src/router/: index.js
Frontend/src/services/: ApiServices.js  AuthService.js  DeviceService.js  NotificationService.js  TaskService.js  UserService.js
Frontend/src/utils/: ApiPrefix.js
Frontend/src/views/: Dashboard.vue  Login.vue  NotFound.vue
(+15 files in other folders)
