[project]
name = "bj35-bot"
version = "0.2.1-alpha"
description = "一个用于管理机器人的Web UI系统后端"
authors = [
    {name = "AptS-1547",email = "esaps@esaps.net"},
    {name = "cg8-5712",email = "5712.cg8@gmail.com"},
    {name = "0515wlx",email = "wlx20082022@163.com"},
    {name = "ChengYuHe519",email = "2772243357@qq.com"},
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "quart (>=0.20.0,<0.21.0)",
    "quart-cors (>=0.8.0,<0.9.0)",
    "quart-jwt-extended (>=0.1.0,<0.2.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "hypercorn (>=0.17.3,<0.18.0)",
    "pycryptodome (>=3.22.0,<4.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "cryptography (>=44.0.3,<45.0.0)",
    "pypinyin (>=0.54.0,<0.55.0)",
    "filelock (>=3.18.0,<4.0.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "colorlog (>=6.9.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
